fix margin collapsing

--- a/src/styles/BestProducts.css
+++ b/src/styles/BestProducts.css
@@ -6,5 +6,5 @@
 .best-products {
   display: flex;
   gap: 2.4rem;
-  margin-bottom: 4rem;
+  margin-bottom: 8rem;
 }
